# kraken_llm

./: QUICKSTART.md  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml
docs/: confidence_repair_cookbook.md
examples/: chatbot_confidence_colors.py  chatbot_streaming_colors.py  logprobs_streaming_example.py  logprobs_vs_plain.py  simple_chat_bot.py  universal_logprobs_example.py
tests/integration/: test_universal_logprobs_live.py
tests/unit/: test_confidence_filter.py  test_confidence_filter_best_attempt.py  test_confidence_metrics.py
